--- a/css/common.css
+++ b/css/common.css
@@ -11,8 +11,65 @@ body {
   background-color: #fafafa;
   color: #212121;
   line-height: 1.5;
+  list-style: none;
 }
 
+/* task-1 */
+#categories {
+  display: inline-flex;
+  padding: 24px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 24px;
+  border-radius: 8px;
+  background: #FFF;
+}
+
+.item {
+  display: flex;
+  padding: 16px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 16px;
+  border-radius: 8px;
+  background: #F6F6FE;
+}
+
+.title {
+  margin: 0;
+  color: #2E2F42;
+  font-family: Montserrat;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 600;
+  letter-spacing: 0.96px;
+}
+
+.list {
+  list-style: none;
+  padding: 0;
+}
+
+.items {
+  width: 360px;
+  height: 40px;
+  border-radius: 4px;
+  border: 1px solid #808080;
+  padding: 8px 16px 8px;
+  color: #2E2F42;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  letter-spacing: 0.64px;
+  margin-bottom: 8px;
+}
+
+.items:last-child {
+  margin-bottom: 0;
+}
+
+/* task-2 */
 .gallery {
   width: 1440px;
   list-style: none;
@@ -28,4 +85,232 @@ img {
   object-fit: cover;
   max-width: 100%;
   height: 300px;
+}
+
+/* task-3 */
+#name-input {
+  width: 360px;
+  height: 40px;
+  color: #2E2F42;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  letter-spacing: 0.64px;
+  padding-left: 16px;
+}
+
+.name-output {
+  color: #2E2F42;
+  font-family: Montserrat;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 600;
+  letter-spacing: 0.96px;
+}
+
+
+/* task-4 */
+.login-form {
+  display: inline-flex;
+  padding: 24px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 16px;
+  border-radius: 8px;
+  background: #FFF;
+}
+
+.text-form {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 8px;
+  color: #2E2F42;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  letter-spacing: 0.64px;
+}
+
+.input-form {
+  display: flex;
+  width: 360px;
+  height: 40px;
+  justify-content: center;
+  align-items: center;
+  padding-left: 16px;
+}
+
+.input-form:hover {
+  border-radius: 4px;
+  border: 1px solid #000;
+}
+
+.input-form:active {
+  border-radius: 4px;
+  border: 1px solid #808080;
+}
+
+.btn-form {
+  display: flex;
+  padding: 8px 16px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-radius: 8px;
+  background: #4E75FF;
+  border: none;
+  color: #FFF;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  letter-spacing: 0.64px;
+  cursor: pointer;
+}
+
+.btn-form:hover {
+  background: #6C8CFF;
+}
+
+
+/* task-5 */
+.widget {
+  display: inline-flex;
+  padding: 100px 88px;
+  flex-direction: column;
+  align-items: flex-start;
+  border-radius: 8px;
+  background: #FFF;
+  gap: 16px
+}
+
+.change-color {
+  display: flex;
+  padding: 8px 16px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 8px;
+  background: #4E75FF;
+  color: #FFF;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  letter-spacing: 0.64px;
+  cursor: pointer;
+  border: none;
+}
+
+.change-color:hover {
+  background: #6C8CFF;
+}
+
+.text {
+  color: #2E2F42;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  letter-spacing: 0.64px;
+  margin: 0;
+}
+
+/* task-6 */
+.container {
+  display: inline-flex;
+  padding: 24px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 16px;
+  border-radius: 8px;
+  background: #FFF;
+
+}
+
+#controls {
+  display: flex;
+  padding: 32px;
+  align-items: flex-start;
+  gap: 16px;
+  border-radius: 8px;
+  background: #F6F6FE;
+}
+
+.input {
+  display: flex;
+  padding: 8px 72px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-radius: 8px;
+  border: 1px solid #808080;
+  color: #2E2F42;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  letter-spacing: 0.64px;
+}
+
+.btn-create {
+  display: flex;
+  width: 120px;
+  padding: 8px 16px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-radius: 8px;
+  background: #4E75FF;
+  color: #FFF;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  letter-spacing: 0.64px;
+  cursor: pointer;
+  border: none;
+}
+
+.btn-destroy {
+  display: flex;
+  width: 120px;
+  padding: 8px 16px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-radius: 8px;
+  background: #FF4E4E;
+  color: #FFF;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  letter-spacing: 0.64px;
+  border: none;
+  cursor: pointer;
+}
+
+.btn-create:hover {
+  background: #6C8CFF;
+}
+
+.btn-destroy:hover {
+  background: #FF7070;
+}
+
+#boxes {
+  display: flex;
+  flex-wrap: wrap;
+  width: 486px;
+  padding: 32px;
+  flex-direction: row;
+  align-items: flex-start;
+  gap: 16px;
+  border-radius: 8px;
+  background: #F6F6FE;
+  flex-shrink: 0;
 }
